--- a/css-calendar.css
+++ b/css-calendar.css
@@ -1,9 +1,10 @@
 /* Fraktur font for added effect! */
 /* Credit: j. 'mach' wust */
-@import url("https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap");
+/*@import url("https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap");*/
 
 body {
-	font-family: "UnifrakturMaguntia", cursive;
+	/*font-family: "UnifrakturMaguntia", cursive;*/
+	font-family: Courier;
 	font-size: 1rem;
 }
 
